src/_src/css/components/_Comrades.css
/**
 * @define Comrades; use strict
 */

.Comrades { }

    .Comrades-list {}

        @media (--medium) {
            .Comrades-list {
                column-count: 3;
                column-width: 30%;
                column-gap: 2rem;
                backface-visibility: hidden; /* fix layout issues caused by transitions elsewhere */
            }
        }

    .Comrades-item {
        list-style: none;
        position: relative;
        padding-left: 1.5rem;
        margin-bottom: 0.25rem;
    }

    .Comrades-item:before {
        content: " \0003E"; /* > */
        position: absolute;
        left: 0.5rem;
        top: -0.15rem;
        font-family: var(--font-headings);
        color: var(--colour-orange);
    }

    .Comrades-link:visited {
        color: var(--colour-green-dark);
    }

        .Comrades-link:before {
            display: none;  /* override default link hover */
        }

    .Comrades-skills {
        font-size: 0.75rem;
        font-style: italic;
        color: var(--colour-grey-mid);
    }

